# VeloDB

./: LICENSE  README.md
doc/: ruscriptrma.md
kvdb/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
kvdb/include/kvdb/: kvdb.hpp
kvdb/include/kvdb/model/: entry.hpp  value.hpp
kvdb/include/kvdb/net/: protocol.hpp  server.hpp
kvdb/include/kvdb/utils/: hash.hpp  logger.hpp
kvdb/scripts/: build_debug.sh  build_release.sh  run_server.sh
kvdb/src/: kvdb.cpp  main.cpp
kvdb/src/model/: entry.cpp  value.cpp
kvdb/src/net/: protocol.cpp  server.cpp
kvdb/src/utils/: hash.cpp  logger.cpp
kvdb/tests/: CMakeLists.txt
